WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
39322
[GTK] DragClientGtk::startDrag leaks GdkEvents
https://bugs.webkit.org/show_bug.cgi?id=39322
Summary
[GTK] DragClientGtk::startDrag leaks GdkEvents
Martin Robinson
Reported
2010-05-18 14:38:00 PDT
SSIA
Attachments
Fix memory leak
(2.17 KB, patch)
2010-05-18 14:40 PDT
,
Martin Robinson
xan.lopez
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Martin Robinson
Comment 1
2010-05-18 14:40:28 PDT
Created
attachment 56414
[details]
Fix memory leak
Xan Lopez
Comment 2
2010-05-18 14:46:00 PDT
Comment on
attachment 56414
[details]
Fix memory leak
>+ GdkWindow* window = gtk_widget_get_window(GTK_WIDGET(m_webView)); >+ g_object_ref(window); // This will be decremented by gdk_event_free() below. >+ event->button.window = gtk_widget_get_window(GTK_WIDGET(m_webView));
just event->button.window = window; ? r=me
Martin Robinson
Comment 3
2010-05-18 15:15:13 PDT
Committed
r59714
: <
http://trac.webkit.org/changeset/59714
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug