2010-05-18  Martin Robinson  <mrobinson@igalia.com>

Reviewed by Xan Lopez.

        [GTK] DragClientGtk::startDrag leaks GdkEvents
        https://bugs.webkit.org/show_bug.cgi?id=39322

        * WebCoreSupport/DragClientGtk.cpp:
        (WebKit::DragClient::startDrag): Properly clean up allocated GdkEvent.

Canonical link: https://commits.webkit.org/50832@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@59714 268f45cc-cd09-0410-ab3c-d52691b4dbfc